src/main/java/br/ufscar/dc/cc2/casamentoparser/casamentoParser.java
// Generated from casamento.g4 by ANTLR 4.7.2
package br.ufscar.dc.cc2.casamentoparser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class casamentoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, NOME=40, STRING=41, DATA=42, HORARIO=43, NUM_INT=44, NUM_REAL=45, 
		WS=46;
	public static final int
		RULE_programa = 0, RULE_titulo = 1, RULE_numConvidados = 2, RULE_data = 3, 
		RULE_orcamento = 4, RULE_listaPadrinhos = 5, RULE_padrinho = 6, RULE_listaPresentes = 7, 
		RULE_presente = 8, RULE_listaConvidados = 9, RULE_listaServicos = 10, 
		RULE_fotografo = 11, RULE_buffet = 12, RULE_cerimonial = 13, RULE_local = 14, 
		RULE_musica = 15, RULE_decoracao = 16, RULE_convites = 17, RULE_lua_de_mel = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "titulo", "numConvidados", "data", "orcamento", "listaPadrinhos", 
			"padrinho", "listaPresentes", "presente", "listaConvidados", "listaServicos", 
			"fotografo", "buffet", "cerimonial", "local", "musica", "decoracao", 
			"convites", "lua_de_mel"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'casamento:'", "'convidados:'", "'data:'", "'orcamento:'", "'R$'", 
			"'padrinhos:'", "'['", "']'", "':'", "'presentes:'", "'{'", "','", "'}'", 
			"'servicos:'", "'fotografo:'", "'buffet:'", "'cerimonial:'", "'local:'", 
			"'musica:'", "'decoracao:'", "'convites:'", "'lua_de_mel:'", "'nome:'", 
			"'contato:'", "'preco:'", "'endereco:'", "'horario_inicio:'", "'horario_fim:'", 
			"'capacidade:'", "'instrumento:'", "'itens_decoracao:'", "'quantidade_convites:'", 
			"'preco_unidade:'", "'hospedagem:'", "'contato_hospedagem:'", "'preco_total:'", 
			"'data_ida:'", "'data_volta:'", "'valor_passagem:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "NOME", "STRING", "DATA", "HORARIO", "NUM_INT", 
			"NUM_REAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "casamento.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public casamentoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TituloContext titulo() {
			return getRuleContext(TituloContext.class,0);
		}
		public NumConvidadosContext numConvidados() {
			return getRuleContext(NumConvidadosContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public OrcamentoContext orcamento() {
			return getRuleContext(OrcamentoContext.class,0);
		}
		public ListaPadrinhosContext listaPadrinhos() {
			return getRuleContext(ListaPadrinhosContext.class,0);
		}
		public ListaPresentesContext listaPresentes() {
			return getRuleContext(ListaPresentesContext.class,0);
		}
		public ListaConvidadosContext listaConvidados() {
			return getRuleContext(ListaConvidadosContext.class,0);
		}
		public ListaServicosContext listaServicos() {
			return getRuleContext(ListaServicosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			titulo();
			setState(39);
			numConvidados();
			setState(40);
			data();
			setState(41);
			orcamento();
			setState(42);
			listaPadrinhos();
			setState(43);
			listaPresentes();
			setState(44);
			listaConvidados();
			setState(45);
			listaServicos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TituloContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(casamentoParser.STRING, 0); }
		public TituloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterTitulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitTitulo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitTitulo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TituloContext titulo() throws RecognitionException {
		TituloContext _localctx = new TituloContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_titulo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__0);
			setState(48);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumConvidadosContext extends ParserRuleContext {
		public TerminalNode NUM_INT() { return getToken(casamentoParser.NUM_INT, 0); }
		public NumConvidadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numConvidados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterNumConvidados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitNumConvidados(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitNumConvidados(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumConvidadosContext numConvidados() throws RecognitionException {
		NumConvidadosContext _localctx = new NumConvidadosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numConvidados);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__1);
			setState(51);
			match(NUM_INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(casamentoParser.DATA, 0); }
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__2);
			setState(54);
			match(DATA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrcamentoContext extends ParserRuleContext {
		public TerminalNode NUM_REAL() { return getToken(casamentoParser.NUM_REAL, 0); }
		public OrcamentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orcamento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterOrcamento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitOrcamento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitOrcamento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrcamentoContext orcamento() throws RecognitionException {
		OrcamentoContext _localctx = new OrcamentoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_orcamento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__3);
			setState(57);
			match(T__4);
			setState(58);
			match(NUM_REAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaPadrinhosContext extends ParserRuleContext {
		public List<PadrinhoContext> padrinho() {
			return getRuleContexts(PadrinhoContext.class);
		}
		public PadrinhoContext padrinho(int i) {
			return getRuleContext(PadrinhoContext.class,i);
		}
		public ListaPadrinhosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaPadrinhos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterListaPadrinhos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitListaPadrinhos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitListaPadrinhos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaPadrinhosContext listaPadrinhos() throws RecognitionException {
		ListaPadrinhosContext _localctx = new ListaPadrinhosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listaPadrinhos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__5);
			setState(61);
			match(T__6);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NOME) {
				{
				{
				setState(62);
				padrinho();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PadrinhoContext extends ParserRuleContext {
		public Token sigla;
		public Token completo;
		public TerminalNode NOME() { return getToken(casamentoParser.NOME, 0); }
		public TerminalNode STRING() { return getToken(casamentoParser.STRING, 0); }
		public PadrinhoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_padrinho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterPadrinho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitPadrinho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitPadrinho(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PadrinhoContext padrinho() throws RecognitionException {
		PadrinhoContext _localctx = new PadrinhoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_padrinho);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((PadrinhoContext)_localctx).sigla = match(NOME);
			setState(71);
			match(T__8);
			setState(72);
			((PadrinhoContext)_localctx).completo = match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaPresentesContext extends ParserRuleContext {
		public List<PresenteContext> presente() {
			return getRuleContexts(PresenteContext.class);
		}
		public PresenteContext presente(int i) {
			return getRuleContext(PresenteContext.class,i);
		}
		public ListaPresentesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaPresentes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterListaPresentes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitListaPresentes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitListaPresentes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaPresentesContext listaPresentes() throws RecognitionException {
		ListaPresentesContext _localctx = new ListaPresentesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaPresentes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__9);
			setState(75);
			match(T__6);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(76);
				presente();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PresenteContext extends ParserRuleContext {
		public Token descricao;
		public Token url;
		public Token NOME;
		public List<Token> nome = new ArrayList<Token>();
		public List<TerminalNode> STRING() { return getTokens(casamentoParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(casamentoParser.STRING, i);
		}
		public List<TerminalNode> NOME() { return getTokens(casamentoParser.NOME); }
		public TerminalNode NOME(int i) {
			return getToken(casamentoParser.NOME, i);
		}
		public PresenteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_presente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterPresente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitPresente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitPresente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PresenteContext presente() throws RecognitionException {
		PresenteContext _localctx = new PresenteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_presente);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__10);
			setState(85);
			((PresenteContext)_localctx).descricao = match(STRING);
			setState(86);
			match(T__11);
			setState(87);
			((PresenteContext)_localctx).url = match(STRING);
			setState(88);
			match(T__11);
			setState(89);
			match(T__6);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOME) {
				{
				setState(90);
				((PresenteContext)_localctx).NOME = match(NOME);
				((PresenteContext)_localctx).nome.add(((PresenteContext)_localctx).NOME);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(91);
					match(T__11);
					setState(92);
					((PresenteContext)_localctx).NOME = match(NOME);
					((PresenteContext)_localctx).nome.add(((PresenteContext)_localctx).NOME);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(100);
			match(T__7);
			setState(101);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaConvidadosContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(casamentoParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(casamentoParser.STRING, i);
		}
		public ListaConvidadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaConvidados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterListaConvidados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitListaConvidados(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitListaConvidados(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaConvidadosContext listaConvidados() throws RecognitionException {
		ListaConvidadosContext _localctx = new ListaConvidadosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listaConvidados);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__1);
			setState(104);
			match(T__6);
			setState(105);
			match(STRING);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(106);
				match(T__11);
				setState(107);
				match(STRING);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaServicosContext extends ParserRuleContext {
		public List<FotografoContext> fotografo() {
			return getRuleContexts(FotografoContext.class);
		}
		public FotografoContext fotografo(int i) {
			return getRuleContext(FotografoContext.class,i);
		}
		public List<CerimonialContext> cerimonial() {
			return getRuleContexts(CerimonialContext.class);
		}
		public CerimonialContext cerimonial(int i) {
			return getRuleContext(CerimonialContext.class,i);
		}
		public List<LocalContext> local() {
			return getRuleContexts(LocalContext.class);
		}
		public LocalContext local(int i) {
			return getRuleContext(LocalContext.class,i);
		}
		public List<MusicaContext> musica() {
			return getRuleContexts(MusicaContext.class);
		}
		public MusicaContext musica(int i) {
			return getRuleContext(MusicaContext.class,i);
		}
		public List<DecoracaoContext> decoracao() {
			return getRuleContexts(DecoracaoContext.class);
		}
		public DecoracaoContext decoracao(int i) {
			return getRuleContext(DecoracaoContext.class,i);
		}
		public List<ConvitesContext> convites() {
			return getRuleContexts(ConvitesContext.class);
		}
		public ConvitesContext convites(int i) {
			return getRuleContext(ConvitesContext.class,i);
		}
		public List<Lua_de_melContext> lua_de_mel() {
			return getRuleContexts(Lua_de_melContext.class);
		}
		public Lua_de_melContext lua_de_mel(int i) {
			return getRuleContext(Lua_de_melContext.class,i);
		}
		public List<BuffetContext> buffet() {
			return getRuleContexts(BuffetContext.class);
		}
		public BuffetContext buffet(int i) {
			return getRuleContext(BuffetContext.class,i);
		}
		public ListaServicosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaServicos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterListaServicos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitListaServicos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitListaServicos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaServicosContext listaServicos() throws RecognitionException {
		ListaServicosContext _localctx = new ListaServicosContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_listaServicos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__13);
			setState(116);
			match(T__10);
			setState(117);
			match(T__14);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				fotografo();
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(123);
				match(T__15);
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(124);
					buffet();
					}
					}
					setState(127); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__10 );
				}
			}

			setState(131);
			match(T__16);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				cerimonial();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(137);
			match(T__17);
			setState(139); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(138);
				local();
				}
				}
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(143);
			match(T__18);
			setState(145); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(144);
				musica();
				}
				}
				setState(147); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(149);
			match(T__19);
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(150);
				decoracao();
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(155);
			match(T__20);
			setState(157); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(156);
				convites();
				}
				}
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(161);
			match(T__21);
			setState(163); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(162);
				lua_de_mel();
				}
				}
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 );
			setState(167);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FotografoContext extends ParserRuleContext {
		public Token nome;
		public Token contato;
		public Token preco;
		public TerminalNode STRING() { return getToken(casamentoParser.STRING, 0); }
		public TerminalNode NUM_INT() { return getToken(casamentoParser.NUM_INT, 0); }
		public TerminalNode NUM_REAL() { return getToken(casamentoParser.NUM_REAL, 0); }
		public FotografoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fotografo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).enterFotografo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof casamentoListener ) ((casamentoListener)listener).exitFotografo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof casamentoVisitor ) return ((casamentoVisitor<? extends T>)visitor).visitFotografo(this);
			else return visitor.visitChildren(this);
		}
	}
